fix html overflow

--- a/src/app.less
+++ b/src/app.less
@@ -61,6 +61,10 @@ table {
 @background: rgb(218, 243, 215);
 @border: rgb(208, 237, 197);
 
+html {
+  overflow: hidden;
+}
+
 html, body {
   height: 100%;
   width: 100%;
